# backend_randomAPI

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
app/: .env_example  config.py  main.py
app/api/: endpoints.py
app/api/schemas/: schema.py
app/core/: db.py
app/services/: random_logic.py  vk_logic.py  vk_utils.py
app/static/: index.html  script.js  style.css
app/utils/: async_request.py  exceptions.py  parce_url.py
